# JumpBlocks

./: Cargo.toml  README.md  plan.md
assets/: update_gamecontrollerdb.sh
assets/action_states/: building.rhai
assets/scripts/: hud.rhai  inventory.rhai
assets/shaders/: chunk_vertex.wgsl  curtain.wgsl  dither_fade.wgsl  dither_prepass.wgsl
crates/openmesh/: Cargo.toml
crates/openmesh-sys/: Cargo.toml  build.rs
crates/openmesh-sys/src/: lib.rs  shim.cpp  shim.h
crates/openmesh/src/: lib.rs
crates/script-lint/: Cargo.toml
crates/script-lint/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: atlas.rs  bridge.rs  canvas.rs  draw_cmd.rs  ffd.rs  glyph.rs  lib.rs  thread.rs
crates/ui/src/render/: extract.rs  mod.rs  node.rs  pipeline.rs  prepare.rs  shader.wgsl
crates/voxel/: Cargo.toml
crates/voxel/src/: chunk.rs  chunk_lod.rs  cluster.rs  coords.rs  cut_offset_chamfer.rs  halfedge_chamfer.rs  lib.rs  meshing.rs  openmesh_chamfer.rs  persistence.rs  region.rs  shape.rs  stamp.rs  streaming.rs  tests.rs  world_def.rs  world_grid.rs  worldgen.rs
scripts/: software-render.sh
src/: action_state.rs  building.rs  camera.rs  challenge.rs  curtain.rs  debug_ui.rs  edge_detection.rs  export.rs  layers.rs  main.rs  network.rs  player.rs  player_state.rs  scripting.rs  world.rs  world_paths.rs
src/native_gamepad/: macos.rs  mod.rs
tests/: jump_metrics.rs  network_test.rs
