[workspace]
members = ["crates/voxel", "crates/ui", "crates/script-lint"]

[package]
name = "jumpblocks"
version = "0.1.0"
edition = "2024"

[dependencies]
jumpblocks_voxel = { path = "crates/voxel" }
bevy = "0.18.1"
jumpblocks-ui = { path = "crates/ui" }
avian3d = "0.5"
bevy-tnua = "0.30"
bevy-tnua-avian3d = "0.10"
bevy_egui = "0.39"
crossbeam-channel = "0.5.15"
lightyear = { version = "0.26", features = ["udp", "netcode"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
rhai = { version = "1", features = ["sync"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-game-controller = "0.3"

# Fast compiles for dev
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
